# Rust-Matrix-falling-rain-library

./: .gitignore  Cargo.toml  Makefile  README-wasm.md  config.yaml  index.html  readme.md
src/: error.rs  lib.rs  main.rs
src/animation/: animation.rs
src/config/: config.rs  mod.rs
src/matrix/: batch_renderer.rs  matrix_character.rs  matrix_col.rs  matrix_world.rs  mod.rs  util.rs
src/renderers/: macroquad.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
