[package]
name = "raytest"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
fastrand = "2.0"  # Works on both native and WASM, no special config needed
instant = "0.1"  # Cross-platform Instant that works on WASM
